	- Put command line arguments in <>'s instead of []'s, as the
	  latter imply that the arguments are optional when they aren't.
	  (Benno Schulenberg)
	- Add missing description of -H/--historylog, and move
	  -x/--nohelp down so that all the command line options are in
	  alphabetical order. (Benno Schulenberg)
	- Change all occurrences of "file name" to "filename". (Benno
	  Schulenberg)
- doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
	- Updated manpage translations by Jean-Philippe Guérard.
- doc/nanorc.sample:
	- Miscellaneous minor fixes. (DLR and Benno Schulenberg)
	- Tweak the "c-file" regex for characters to accept '"' again,
	  as it's apparently valid, and simplify it. (DLR)
	- Simplify the "shellscript" regex for command line options.
	  (DLR)
	- Replace instances of \" with ", since quotes inside string
	  parameters don't need to be escaped with backslashes. (DLR)
	- Mention in the comments that more than one start/end regex can
	  be included per line.  Also, change the comment for the
	  "whitespace" option so that the hexadecimal character values
	  are six digits long, and state which character values work
	  with which encodings. (DLR)
	- Add sample regexes for Python. (singular on the Gentoo forums,
	  http://forums.gentoo.org/viewtopic.php?t=86562; minor tweaks
	  by DLR, suggested by John M. Gabriele)
	- Explicitly mention that all regexes should be extended regular
	  expressions. (DLR, suggested by John M. Gabriele)
	- Simplify the "nanorc" regex for commands. (DLR)
	- Mention that the nanorc file should not be in DOS or Mac
	  format. (DLR)
	- Add various wording fixes. (Benno Schulenberg and DLR)
	- Replace instances of "\w" with its equivalent "[0-9A-Za-z_]",
	  and instances of "\W" with its equivalent "[^0-9A-Za-z_]", for
	  greater readability. (DLR)
	- Remove unneeded foreground color for the Java source regex
	  used to highlight trailing whitespace, since we now support