@@ -414,6 +414,8 @@ CVS code -
 	  alphabetical order. (Benno Schulenberg)
 	- Change all occurrences of "file name" to "filename". (Benno
 	  Schulenberg)
+- doc/man/Makefile.am:
+	- Simplify the setting of SUBDIRS. (DLR)
 - doc/man/fr/nano.1, doc/man/fr/nanorc.5, doc/man/fr/rnano.1:
 	- Updated manpage translations by Jean-Philippe Guérard.
 - doc/nanorc.sample:
